<?xml version="1.0"?>
<package format="2">
  <name>rosbaz</name>
  <version>1.5.0</version>
  <description>Streaming rosbags from azure blob storage</description>

  <maintainer email="jan@bernloehrs.de">Jan Bernloehr</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>

  <export>
  </export>
</package>
